<resources>
    <string name="app_name">NMedia</string>
    <string name="text_n_media">NMedia!</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_post">Edit post</string>
    <string name="empty_content">Error empty content</string>
    <string name="netology">Netology</string>
    <string name="edit_message">Edit message</string>
    <string name="add_or_edit_post">add or edit post</string>
    <string name="share_post">Share post</string>
    <string name="video_link">Video link</string>
    <string name="chanel_remote_name" translatable="false">remote</string>
    <string name="chanel_remote_description" translatable="false">remote description</string>
    <string name="notification_user_liked">%1$s liked post %2$s</string>
    <string name="retry">retry</string>
    <string name="go_up_newer">Свежие записи</string>
    <string name="error_404">error 404</string>
    <string name="clear_photo">clear photo</string>
    <string name="save">Save</string>
    <string name="back">back</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="error">Error</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
</resources>